# interview-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: codebase-analyst.md
docs/: CHANGELOG.md  PLATFORM_COMPATIBILITY.md  README.md  TROUBLESHOOTING.md  interview_agent_guide.md  parakeet-stt-guide.md  tts-alternatives-comparison.md
docs/api/: README.md
docs/architecture/: design-decisions.md  overview.md
docs/phases/: phase-01-foundation.md  phase-02-tts-integration.md  phase-03-stt-implementation.md  phase-04-orchestration.md  phase-05-csv-export.md  phase-06-cli.md  phase-07-piper-migration.md
docs/research/: piper-integration-guide.md  tts-library-comparison.md
examples/: README.md  create_demo_pdf.py  demo_csv_export.py  demo_orchestration.py  demo_parakeet.py  demo_pdf_parser.py  demo_stt.py  demo_tts.py
features/: parakeet-stt-provider.md  phase-03-stt-implementation.md  piper-tts-migration.md  structured-data-normalization.md  voice-interview-agent.md
src/conversation_agent/: __init__.py
src/conversation_agent/cli/: __init__.py  __main__.py  interview.py
src/conversation_agent/config/: __init__.py  export_config.py  normalization_config.py  stt_config.py  tts_config.py
src/conversation_agent/core/: __init__.py  audio.py  (+6 more)
tests/: test_audio_manager.py  test_cli_interview.py  test_conversation_state.py  test_csv_exporter.py  test_intent_recognizer.py  test_interview_orchestrator.py  test_parakeet_provider.py  test_pdf_parser.py  test_stt_providers.py  test_text_normalizer.py  test_tts_providers.py
tests/fixtures/: generate_test_pdfs.py
(+13 files in other folders)
